fix(projects): align z-index hierarchy

--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -231,6 +231,7 @@ div#slide {
   display: flex;
   gap: 20px;
   justify-content: flex-end;
+  z-index: 2;
 }
 
 .buttons button {
